<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>labjack</name>
  <version>0.0.0</version>
  <description>Labjack U3 interface node</description>
  <maintainer email="pierce@ladonrobotics.com">Pierce Nichols</maintainer>
  <license>Copyright Ladon Robotics (c) 2022. All rights reserved.</license>

  <depend>rclpy</depend>
  <depend>ssp_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
